# machine-learning

./: pyproject.toml  requirements.txt
day13-end-to-end-ml/: apiinterface.py  end_to_end_ml.ipynb  model.pkl  requirements.txt  scaler.pkl
day13-end-to-end-ml/.ipynb_checkpoints/: end_to_end_ml-checkpoint.ipynb
day15 - working with csv files/: working-with-csv.ipynb
day16 - working-with-json-and-sql/: day16.ipynb
day17-api-to-dataframe/: day17.ipynb
day18-pandas-dataframe-using-web-scraping/: day18.ipynb
day19-understanding-your-data-descriptive-stats/: day19.ipynb
pandas/: 001_learn_panadas.ipynb
